# rebuilt_rl

./: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: gym.md  rl.md  training.md
scripts/: evaluate.py  generate_physics_test_data.py  physics_test_data.json  shot_simulator.html  shot_simulator_README.md  train.py  visualize.py  visualize_template.html
src/: __init__.py  config.py  sac_logging.py
src/callbacks/: __init__.py  curriculum.py
src/env/: __init__.py  shooter_env.py  shooter_env_continuous.py
src/paths/: __init__.py  path_generator.py
src/physics/: __init__.py  projectile.py
tests/: test_curriculum.py  test_env.py  test_env_moving.py  test_paths.py  test_physics.py  test_physics_moving.py
