[project]
name = "frc-rl"
version = "0.1.0"
description = "Reinforcement learning for FRC 2026 REBUILT ball shooter"
authors = [{ name = "Team 766" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<3.13"
keywords = ["frc", "robotics", "reinforcement-learning", "gymnasium", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy<2.0.0",
    "gymnasium>=0.29.0",
    "stable-baselines3>=2.2.0",
    "tensorboard>=2.14.0",
]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-cov = ">=4.1.0"
black = ">=23.9.0"
ruff = ">=0.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "src" }]

[[tool.poetry.source]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
priority = "explicit"

[tool.poetry.dependencies]
torch = {version = "2.10.0", source = "pytorch-cu130"}

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N"]
