[tool.poetry]
name = "frc-rl"
version = "0.1.0"
description = "Reinforcement learning for FRC 2026 REBUILT ball shooter"
authors = ["Team 766"]
readme = "README.md"
packages = [{ include = "src" }]
license = "MIT"
keywords = ["frc", "robotics", "reinforcement-learning", "gymnasium", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# PyTorch wheel source - cu126 for broad compatibility
# For DGX Spark (cu130), see README for override instructions
[[tool.poetry.source]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.10,<3.13"

# Base dependencies
numpy = "<2.0.0"
tqdm = "^4.66.0"
rich = "^13.0.0"

# PyTorch with CUDA 12.6 (default for most systems)
torch = {version = "^2.9.0", source = "pytorch-cu126"}

# RL dependencies
gymnasium = "^0.29.0"
stable-baselines3 = "^2.2.0"
tensorboard = "^2.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.9.0"
ruff = "^0.10.0"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N"]
